[package]
name = "paillier-php"
version = "0.2.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
# TODO fast-paillier versions leter than 0.1.1 won't build for some reason
fast-paillier = "0.1.1"
rug = "1.28.0"
#rand = {version = "0.9.2", features = ["std"]}
rand_core = {version = "0.6.4", features = ["getrandom"]}
ext-php-rs = "*"

[dev-dependencies]
#rand = "0.9.2"
