[package]
name = "paillier-php"
version = "0.2.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
# TODO switch back to the main fast-paillier crate when they fix the build issue
fast-paillier = {version = "0.3.2", features = ["backend-rug"], git = "https://github.com/bafta/fast-paillier"}
rug = "1.28.0"
#rand = {version = "0.9.2", features = ["std"]}
rand_core = {version = "0.6.4", features = ["getrandom"]}
ext-php-rs = "*"

[dev-dependencies]
#rand = "0.9.2"
