[package]
name = "paillier-php"
version = "0.2.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
# TODO switch back to the main fast-paillier crate when they fix the build issue
fast-paillier = {version = "0.3.2", features = ["backend-rug"], git = "https://github.com/bafta/fast-paillier"}
rand_core = {version = "0.6.4", features = ["getrandom"]}
ext-php-rs = "*"

[dev-dependencies]
